fix the "hello" thing being broken in mobile (just took it out)

--- a/FoundryMissionsCom/Content/Site.css
+++ b/FoundryMissionsCom/Content/Site.css
@@ -111,9 +111,19 @@ li.minornavbutton {
     font-size: 75%;
 }
 
-.minornavtext{
-    line-height: 20px;
+    .minornavtext{
+         line-height:20px;
+    }
+
+
+@media (max-width: 768px) 
+{
+    .minornavtext{
+         display: none;
+    }
 }
+
+
 
 /* Submit mission */
 
